...
        button.setTitleColor(Constants.loginButtonTitleColor, for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: LayoutConstants.loginFontSize, weight: .bold)
        button.backgroundColor = .ypWhite
        button.layer.masksToBounds = true
        button.translatesAutoresizingMaskIntoConstraints = false
        button.layer.cornerRadius = LayoutConstants.loginCornerRadius
        button.accessibilityIdentifier = "Authenticate"
        return button
    }()
    
    // MARK: - Public Properties
    
    weak var delegate: AuthViewControllerDelegate?
...
